# VariationalPathIntegral

./: .gitignore  Setup.hs  VariationalPathIntegral.cabal  VariationalPathIntegral.leo
examples/: run.py  test.hs
sources/Test/Framework/Providers/: Statistics.hs
sources/VPI/: Algorithm.hs  Estimator.hs  Observable.hs  Observables.hs  Path.hs  Physics.hs  Sliceable.hs  Spliceable.hs  Subrangeable.hs  Thermalize.hs  Updatable.hs
sources/VPI/Fortran/: Observables.hs  Path.hs
sources/VPI/Fortran/GreensFunction/: SecondOrder.hs
sources/VPI/Fortran/Histograms/: Position.hs
sources/VPI/Fortran/Path/: Moves.hs
sources/VPI/Fortran/Physics/: HarmonicOscillator.hs
sources/VPI/GreensFunction/: SecondOrder.hs
sources/VPI/Histogram/Position/: Integrated1DSlices.hs
sources/VPI/Observable/: Energy.hs
sources/VPI/Path/: Moves.hs
sources/VPI/Physics/: HarmonicOscillator.hs
sources/c/vpic/: path-wrapper.c  path.c
sources/fortran/vpi/: path.f95
sources/haskell/VPI/: Miscellaneous.hs  Path.hs
sources/vpic/: observables.c  path.c
sources/vpic/greens_function/: second_order.c
sources/vpic/histograms/: position.c
sources/vpic/path/: moves.c
sources/vpic/physics/: harmonic_oscillator.c
sources/vpif/: observables.f95  path.f95  random.f95
sources/vpif/greens_function/: second_order.f95
sources/vpif/histograms/: position.f95
sources/vpif/path/: moves.f95
sources/vpif/physics/: harmonic_oscillator.f95
tests/: test.hs
